[gd_scene load_steps=45 format=3 uid="uid://b688a0ng5501r"]

[ext_resource type="Script" path="res://Mobs/skeleton/skeleton.gd" id="1_chf4p"]
[ext_resource type="Texture2D" uid="uid://d01dvqcw7hbyn" path="res://Monsters_Creatures_Fantasy/Skeleton/Take Hit.png" id="1_lej6y"]
[ext_resource type="Texture2D" uid="uid://bbslb5bp2v828" path="res://Monsters_Creatures_Fantasy/Skeleton/Attack.png" id="2_04tes"]
[ext_resource type="Texture2D" uid="uid://t5m3onvqgy0o" path="res://Monsters_Creatures_Fantasy/Skeleton/Death.png" id="2_7km1h"]
[ext_resource type="Texture2D" uid="uid://cronu2lbwxj50" path="res://Monsters_Creatures_Fantasy/Skeleton/Walk.png" id="3_nlikf"]
[ext_resource type="Texture2D" uid="uid://ddio3di00yel4" path="res://Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="4_e10nj"]
[ext_resource type="PackedScene" uid="uid://5s735bpok0ur" path="res://scn/DamageBox/damage_box.tscn" id="7_qyq4l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vv2gs"]
atlas = ExtResource("2_04tes")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1w84"]
atlas = ExtResource("2_04tes")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6m6o"]
atlas = ExtResource("2_04tes")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqv6r"]
atlas = ExtResource("2_04tes")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6rdc"]
atlas = ExtResource("2_04tes")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kyq4"]
atlas = ExtResource("2_04tes")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5che"]
atlas = ExtResource("2_04tes")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfy2g"]
atlas = ExtResource("2_04tes")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_13fur"]
atlas = ExtResource("1_lej6y")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo5ms"]
atlas = ExtResource("1_lej6y")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_at0lq"]
atlas = ExtResource("1_lej6y")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptcwu"]
atlas = ExtResource("1_lej6y")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a06p"]
atlas = ExtResource("1_lej6y")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqp6x"]
atlas = ExtResource("1_lej6y")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nllyp"]
atlas = ExtResource("2_7km1h")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcdwn"]
atlas = ExtResource("2_7km1h")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_im5b8"]
atlas = ExtResource("2_7km1h")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2n1d"]
atlas = ExtResource("2_7km1h")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr2cl"]
atlas = ExtResource("3_nlikf")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfkvt"]
atlas = ExtResource("3_nlikf")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny4lo"]
atlas = ExtResource("3_nlikf")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cjkk"]
atlas = ExtResource("3_nlikf")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikttm"]
atlas = ExtResource("4_e10nj")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_smu0b"]
atlas = ExtResource("4_e10nj")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxg7g"]
atlas = ExtResource("4_e10nj")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cel1i"]
atlas = ExtResource("4_e10nj")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_58mmg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv2gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1w84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6m6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqv6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6rdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kyq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5che")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfy2g")
}],
"loop": false,
"name": &"Attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13fur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo5ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at0lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptcwu")
}],
"loop": false,
"name": &"Damage",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a06p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqp6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nllyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcdwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im5b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2n1d")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr2cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfkvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny4lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cjkk")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikttm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smu0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxg7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cel1i")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_osjfr"]
radius = 9.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_blxme"]
radius = 231.311

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4un6y"]
size = Vector2(40, 3.22632)

[sub_resource type="Animation" id="Animation_4fguk"]
length = 0.888889
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_dpr7s"]
length = 0.571429
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}

[sub_resource type="Animation" id="Animation_bskra"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_02kua"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_daux2"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="Animation" id="Animation_xsbla"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5qxh"]
_data = {
"Attack": SubResource("Animation_4fguk"),
"Damage": SubResource("Animation_dpr7s"),
"Death": SubResource("Animation_bskra"),
"RESET": SubResource("Animation_02kua"),
"Run": SubResource("Animation_daux2"),
"default": SubResource("Animation_xsbla")
}

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_chf4p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -11)
scale = Vector2(0.726667, 0.71598)
sprite_frames = SubResource("SpriteFrames_58mmg")
animation = &"Attack"
autoplay = "default"
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_osjfr")

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_blxme")

[node name="AttackDirection" type="Node2D" parent="."]

[node name="Attack" type="Area2D" parent="AttackDirection"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/Attack"]
position = Vector2(20, -6)
shape = SubResource("RectangleShape2D_4un6y")

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("7_qyq4l")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox" index="0"]
position = Vector2(0, -11)

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(10, -10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v5qxh")
}

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="AttackDirection/Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="AttackDirection/Attack" to="." method="_on_attack_body_exited"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="AttackDirection/DamageBox"]
